# myc_2026

./: README.md
20260302/: hola.c  parity.c  upper.c
20260304/: aux_lib.c  aux_lib.h  keyboard_input.c  my_printf.c  precedence.c
20260309/: CMakeLists.txt  convolucion.html  convolucion.md  fibo.c  my_strings.c  non_recursive_conv.c  precedence.c  recursive_conv.c
20260309/convolucion_recursividad/: non_recursive_conv.c  recursive_conv.c
20260311/: CMakeLists.txt  bubble_sort.c  circular_buffer.c
20260316/: archivos.c  puntero_a_funcion.c  punteros.c  punteros_array.c
20260323/: app.c  my_lib.c  my_lib.h
20260330/: lib1.c  lib1.h  lib2.c  lib2.h  main.c
20260401/: parcial1.c  vpointer.c
20260413/: switch_case.c  table_driven.c
20260415/button_led/: .cproject  .mxproject  .project  button_led.ioc  prierm_proyecto Debug.launch
20260420/Blinky_CleanCode/: .project  Blinky_CleanCode.launch  Blinky_Led_HAND.launch
20260420/Button_PWM/: .project  Button_PWM.ioc  Button_PWM.launch
20260422/DeBounce/: .project  DeBounce Debug.launch
20260427/: .project
20260427/ADC_Test/: ADC_Test Debug.launch
20260502/button_clicks/: .project
20260506/.metadata/: .log4j2.xml  version.ini
20260506/USART_IT/: .cproject  USART_IT Debug.launch  USART_IT.ioc
20260506/USART_Polling/: .cproject  .project  USART_Polling Debug.launch  USART_Polling.ioc
20260506/USART_RxIT/: .cproject  .mxproject  .project  USART_Polling Debug.launch  USART_RxIT.ioc  USART_RxIT.launch
TPN1/: .gitignore  ej6.h  ej6_main.c  ej7.h
TPN1/ej1/: CMakelists.txt  ej1.c
TPN1/ej2/: ej2.c  (+1 more)
(+159 files in other folders)
